feat: create video grid && append to dom

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -6,6 +6,10 @@
   <title>Zoom Room</title>
 </head>
 <body>
-  ROOM
+  <div id="video-grid">
+    
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
