--- a/views/room.ejs
+++ b/views/room.ejs
@@ -4,12 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Zoom Room</title>
+  <style>
+    #video-grid {
+      display: flex;
+      justify-content: center;
+    }
+
+    video {
+      height: 300px;
+      width: 400px;
+      object-fit: cover;
+    }
+  </style>
+  <script>
+    const ROOM_ID = "<%= roomId %>";
+  </script>
 </head>
 <body>
   <div id="video-grid">
     
   </div>
 
+  <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
