--- a/views/room.ejs
+++ b/views/room.ejs
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Zoom Room</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="video-grid">
-    
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
